# InventreeRemoteHTTPPrintPlugin

./: README.md  pyproject.toml
inventree_brotherql/: plugin.py
inventree_remote_http_print/: __init__.py  client.py  plugin.py
inventree_remote_http_print/static/: endpoint_editor.js
inventree_remote_http_print/static/plugins/remote-http-print/: endpoint_editor.js
tests/: conftest.py  test_client.py  test_plugin.py
