[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-remote-http-print-service"
version = "0.1.0"
description = "Remote HTTP print service"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "InvenTree community" },
]
keywords = ["inventree", "plugin", "label", "printer", "brother", "brotherql", "ql-800", "ql-820nwb"]
classifiers = [
    "Framework :: InvenTree",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Manufacturing",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "requests>=2.28",
    # Pillow is required by InvenTree itself for rasterising labels, so we
    # don't pin it here. The plugin only needs it at runtime (when a PIL
    # Image arrives in print_label), not at import time.
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "responses>=0.23",
]

[project.entry-points."inventree_plugins"]
BrotherQLLabelPrintPlugin = "inventree_brotherql.plugin:BrotherQLLabelPrintPlugin"

[tool.setuptools.packages.find]
include = ["inventree_brotherql*"]
exclude = ["tests*"]
